--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "description": "一个使用electron开发的豆瓣客户端",
   "dependencies": {
     "@types/lodash": "^4.14.136",
-    "antd": "^3.16.3",
-    "axios": "^0.18.0",
+    "antd": "^3.20.7",
+    "axios": "^0.18.1",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "koa-server-http-proxy": "^0.1.0",
@@ -23,8 +23,9 @@
     "react-dom": "^16.8.6",
     "react-lazy-load": "^3.0.13",
     "react-perfect-scrollbar": "^1.5.3",
-    "react-router-dom": "^5.0.0",
-    "react-scrollbar": "^0.5.6"
+    "react-router-dom": "^5.0.1",
+    "react-scrollbar": "^0.5.6",
+    "true-case-path": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
@@ -39,7 +40,7 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
-    "babel-plugin-named-asset-import": "^0.3.1",
+    "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -48,7 +49,7 @@
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "electron": "4.1.3",
-    "electron-builder": "^20.40.2",
+    "electron-builder": "^20.44.4",
     "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
@@ -66,6 +67,7 @@
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
