--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,  
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -28,4 +29,31 @@
   "exclude":[
     "src/setupProxy.js"
   ],
+  // 这将告诉编译器，在解析路径的时候统一将src解析为baseUrl下的src目录(其他类似)。
+  // http://www.mamicode.com/info-detail-2458196.html
+  // 没有效果！！！ webpack报错：TypeScript error: Cannot find module
+  "baseUrl": ".",
+  "paths": {
+    "src/*":[
+      "./src/*"
+    ],
+    "api/*":[
+      "./src/api/*"
+    ],
+    "assets/*":[
+      "./src/assets/*"
+    ],
+    "pages/*":[
+      "./src/pages/*"
+    ],
+    "utils/*":[
+      "./src/utils/*"
+    ],  
+    "components/*":[
+      "./src/components/*"
+    ],
+    "skeletons/*":[
+      "./src/skeletons/*"
+    ],
+  }
 }
